Fix API-key comment imports
Refs #53
